Fix z-index on dashboard add button

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root{
+  z-index: 0;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
